@@ -32,7 +32,7 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
       <version>0.21.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
