@@ -37,7 +37,7 @@ coreplugin.version=1.3.2
 ftplet-api.version=1.0.2
 ftpserver-core.version=1.0.2
 
-hadoop-core.version=0.21.0-SNAPSHOT
+hadoop-common.version=0.21.0-SNAPSHOT
 hadoop-hdfs.version=0.21.0-SNAPSHOT
 
 hsqldb.version=1.8.0.10
