@@ -497,6 +497,9 @@ Release 0.21.0 - Unreleased
     HDFS-1089. Remove uses of FileContext#isFile, isDirectory, and exists.
     (Eli Collins via hairong)
 
+    HDFS-1126. Change HDFS to depend on Hadoop 'common' artifacts instead
+    of 'core'. (tomwhite)
+
   OPTIMIZATIONS
 
     HDFS-946. NameNode should not return full path name when lisitng a
